fixed some more errors after testing on mobile

--- a/src/components/Quote.css
+++ b/src/components/Quote.css
@@ -9,4 +9,5 @@
   font-size: 1.35rem;
 
   min-height: min-content;
+  margin-top: 1rem;
 }
